--- a/config/clecotools/default/core.entity_form_display.node.product.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.product.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - node.type.product
   module:
     - content_moderation
+    - inline_entity_form
     - media_library
     - path
     - text
@@ -43,11 +44,17 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_downloads:
-    type: media_library_widget
+    type: inline_entity_form_simple
     weight: 132
     region: content
     settings:
-      media_types: {  }
+      form_mode: default
+      override_labels: false
+      label_singular: ''
+      label_plural: ''
+      collapsible: false
+      collapsed: false
+      revision: false
     third_party_settings: {  }
   field_footnotes:
     type: text_textarea
@@ -180,6 +187,11 @@ content:
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  translation:
+    weight: 10
+    region: content
+    settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
