--- a/config/clecotools/default/core.entity_view_display.media.product_downloads.media_library.yml
+++ b/config/clecotools/default/core.entity_view_display.media.product_downloads.media_library.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.media.product_downloads.field_language
     - field.field.media.product_downloads.field_listing_image
     - field.field.media.product_downloads.field_media_file
+    - field.field.media.product_downloads.field_product_category
     - field.field.media.product_downloads.field_type
     - image.style.medium
     - media.type.product_downloads
@@ -33,6 +34,7 @@ hidden:
   field_language: true
   field_listing_image: true
   field_media_file: true
+  field_product_category: true
   field_type: true
   langcode: true
   name: true
