--- a/config/clecotools/default/field.storage.node.field_model_specification.yml
+++ b/config/clecotools/default/field.storage.node.field_model_specification.yml
@@ -1,18 +1,17 @@
-uuid: 7063c458-69e4-4f87-9561-982a95d92662
+uuid: 60d01f98-4cbf-40c9-9345-209adcb013be
 langcode: en
 status: true
 dependencies:
   module:
-    - entity_reference_revisions
     - node
-    - paragraphs
+    - taxonomy
 id: node.field_model_specification
 field_name: field_model_specification
 entity_type: node
-type: entity_reference_revisions
+type: entity_reference
 settings:
-  target_type: paragraph
-module: entity_reference_revisions
+  target_type: taxonomy_term
+module: core
 locked: false
 cardinality: -1
 translatable: true
