APS-48 Upgrade BEF module and SBEF module to latest versions and Changes to exposed form via alter.

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "drupal/admin_toolbar": "^3.2.1",
         "drupal/advagg": "^4.0",
         "drupal/allowed_formats": "^1.4",
-        "drupal/better_exposed_filters": "^5.0@beta",
+        "drupal/better_exposed_filters": "^6.0",
         "drupal/bg_image_formatter": "^1.16",
         "drupal/blazy": "^2.2",
         "drupal/block_class": "^1.1",
@@ -122,7 +122,7 @@
         "drupal/schema_metatag": "^2.1",
         "drupal/search_api": "^1.28",
         "drupal/search_api_solr": "4.2.8",
-        "drupal/selective_better_exposed_filters": "^2.0@beta",
+        "drupal/selective_better_exposed_filters": "^3.0@beta",
         "drupal/shield": "^1.6",
         "drupal/simple_sitemap": "^3.3",
         "drupal/smart_trim": "^2.0.0",
