APEX-138: Specification and Classification taxonomy mapping.

--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_two.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_two.yml
@@ -86,3 +86,6 @@ process:
 destination:
   plugin: entity:taxonomy_term
   default_bundle: product_classifications
+migration_dependencies:
+  required:
+    - cleco_product_classifications_level_one
