--- a/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_classifications_level_two.yml
@@ -87,4 +87,6 @@ process:
 destination:
   plugin: 'entity:taxonomy_term'
   default_bundle: product_classifications
-migration_dependencies: null
+migration_dependencies:
+  required:
+    - cleco_product_classifications_level_one
