APEX-134: CAMPBELL Where to buy

--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -27,6 +27,7 @@ module:
   campbell_common: 0
   campbell_migrations: 0
   campbell_product_category_filtering: 0
+  campbell_where_to_buy: 0
   ckeditor: 0
   classy_paragraphs: 0
   color: 0
@@ -59,7 +60,9 @@ module:
   fixed_block_content: 0
   focal_point: 0
   geolocation: 0
+  geolocation_address: 0
   geolocation_google_maps: 0
+  geolocation_google_places_api: 0
   google_tag: 0
   hal: 0
   help: 0
