--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_gb.yml
@@ -1,14 +1,14 @@
-uuid: 668d079c-d481-457d-99f6-c2bfd54e7c3c
+uuid: 97c14840-374a-4631-8f52-bc6b2dc82b79
 langcode: en
 status: true
 dependencies: {  }
-id: cleco_product_specifications
+id: cleco_product_specifications_gb
 class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
 migration_group: cleco
-label: 'Product Specifications'
+label: 'Product Specifications for Language GB'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
@@ -17,7 +17,7 @@ source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: xml
-  urls: 'public://import/pim_data/pim_export_with_schema.xml'
+  urls: 'public://import/pim_data/pim_export_with_schema_gb.xml'
   namespaces:
     stibo: 'http://www.stibosystems.com/step'
   item_selector: /STEP-ProductInformation/AttributeList/Attribute
@@ -54,7 +54,7 @@ process:
         - remote_term_name
   langcode:
     plugin: default_value
-    default_value: en
+    default_value: gb
 destination:
   plugin: 'entity:taxonomy_term'
   default_bundle: product_specifications
