--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_two.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_classifications_level_two.yml
@@ -75,8 +75,9 @@ process:
     default_value: 0
   parent:
     -
-      plugin: apex_get_classification_parent_term
+      plugin: cleco_get_classification_parent_term
       source: remote_parent_name
+      langcode: en
     -
       plugin: default_value
       default_value: 0
