--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_gb.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_gb.yml
@@ -1,14 +1,6 @@
-uuid: 668d079c-d481-457d-99f6-c2bfd54e7c3c
-langcode: en
-status: true
-dependencies: {  }
-id: cleco_product_specifications
-class: null
-field_plugin_method: null
-cck_plugin_method: null
-migration_tags: null
+id: cleco_product_specifications_gb
+label: Product Specifications for Language GB
 migration_group: cleco
-label: 'Product Specifications'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
@@ -17,9 +9,9 @@ source:
   plugin: url
   data_fetcher_plugin: http
   data_parser_plugin: xml
-  urls: 'public://import/pim_data/pim_export_with_schema.xml'
+  urls: 'public://import/pim_data/pim_export_with_schema_gb.xml'
   namespaces:
-    stibo: 'http://www.stibosystems.com/step'
+    stibo: "http://www.stibosystems.com/step"
   item_selector: /STEP-ProductInformation/AttributeList/Attribute
   fields:
     -
@@ -28,7 +20,7 @@ source:
       selector: '@ID'
     -
       name: remote_term_name
-      label: 'Term Name'
+      label: Term Name
       selector: Name
   ids:
     remote_term_id:
@@ -46,16 +38,15 @@ process:
         - constants/TEXT
         - remote_term_name
   field_long_name:
-    -
-      plugin: concat
+    - plugin: concat
       source:
         - remote_term_id
         - constants/TEXT
         - remote_term_name
   langcode:
     plugin: default_value
-    default_value: en
+    default_value: gb
 destination:
   plugin: 'entity:taxonomy_term'
   default_bundle: product_specifications
-migration_dependencies: {  }
+migration_dependencies: {}
