APEX-366: Creation of Product Details page for Enhanced products

--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -29,6 +29,7 @@ module:
   captcha: 0
   ckeditor: 0
   cleco_migrations: 0
+  cleco_vuejs: 0
   color: 0
   comment: 0
   config: 0
@@ -127,7 +128,6 @@ module:
   sfweb2lead_webform: 0
   shortcut: 0
   sophron: 0
-  step: 0
   swiftmailer: 0
   system: 0
   tamper: 0
