--- a/config/clecotools/default/paragraphs.paragraphs_type.featured_products.yml
+++ b/config/clecotools/default/paragraphs.paragraphs_type.featured_products.yml
@@ -7,5 +7,6 @@ dependencies:
 id: featured_products
 label: 'Featured Products'
 icon_uuid: 3ff739a5-959c-4457-8f86-17cf87cfb2f7
+icon_default: null
 description: 'ElasticSearch relationship module.'
 behavior_plugins: {  }
