--- a/config/clecotools/local/core.extension.yml
+++ b/config/clecotools/local/core.extension.yml
@@ -30,6 +30,7 @@ module:
   captcha: 0
   ckeditor: 0
   cleco_migrations: 0
+  cleco_vuejs: 0
   color: 0
   comment: 0
   config: 0
@@ -133,7 +134,6 @@ module:
   shortcut: 0
   sophron: 0
   stage_file_proxy: 0
-  step: 0
   swiftmailer: 0
   system: 0
   tamper: 0
