--- a/config/clecotools/default/core.entity_view_display.paragraph.featured_products.default.yml
+++ b/config/clecotools/default/core.entity_view_display.paragraph.featured_products.default.yml
@@ -3,23 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.featured_products.field_products
     - field.field.paragraph.featured_products.field_title
     - paragraphs.paragraphs_type.featured_products
-  module:
-    - step
 id: paragraph.featured_products.default
 targetEntityType: paragraph
 bundle: featured_products
 mode: default
 content:
-  field_products:
-    type: products_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
   field_title:
     type: string
     label: hidden
@@ -28,4 +18,6 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-hidden: {  }
+hidden:
+  search_api_excerpt: true
+  uuid: true
