--- a/config/crescenttool_au/remote_prod/google_tag.container.primary.yml
+++ b/config/crescenttool_au/remote_prod/google_tag.container.primary.yml
@@ -3,12 +3,13 @@ langcode: en
 status: true
 dependencies:
   module:
-    - ctools
+    - node
+    - taxonomy
     - webform
 id: primary
 label: Primary
 weight: 0
-container_id: GTM-PMH6W7M
+container_id: GTM-WS57Z7D
 data_layer: dataLayer
 include_classes: false
 whitelist_classes: |-
@@ -32,11 +33,32 @@ path_list: |-
   /user/*/edit*
   /user/*/cancel*
 role_toggle: 'exclude listed'
-role_list:
-  authenticated: authenticated
-  administrator: administrator
+role_list: {  }
 status_toggle: 'exclude listed'
 status_list: |-
   403
   404
-conditions: {  }
+conditions:
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
+    bundles: {  }
+  'entity_bundle:taxonomy_term':
+    id: 'entity_bundle:taxonomy_term'
+    negate: false
+    context_mapping:
+      taxonomy_term: '@taxonomy_term.taxonomy_term_route_context:taxonomy_term'
+    bundles: {  }
+  'entity_bundle:webform_submission':
+    id: 'entity_bundle:webform_submission'
+    negate: false
+    context_mapping:
+      webform_submission: '@webform.webform_submission_route_context:webform_submission'
+    bundles: {  }
+  webform:
+    id: webform
+    negate: false
+    context_mapping: {  }
+    webforms: {  }
