--- a/composer.json
+++ b/composer.json
@@ -176,6 +176,7 @@
         "furf/jquery-ui-touch-punch": "^1.0",
         "geocoder-php/google-maps-provider": "^4.7",
         "league/flysystem-sftp": "^2.0",
+        "monolog/monolog": "^2.9",
         "topfloor/composer-cleanup-vcs-dirs": "^1.1",
         "vlucas/phpdotenv": "^5.3",
         "vmlyr-drupal/bazo": "^8.0",
