APEX-336: Addtothis share feature

--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -3,6 +3,7 @@ _core:
 module:
   acquia_search: 0
   address: 0
+  addtothis_apex: 0
   admin_toolbar: 0
   admin_toolbar_links_access_filter: 0
   admin_toolbar_tools: 0
