--- a/config/campbell/default/block.block.marketlistingpage.yml
+++ b/config/campbell/default/block.block.marketlistingpage.yml
@@ -11,14 +11,14 @@ dependencies:
     - campbell
 id: marketlistingpage
 theme: campbell
-region: pre_content
-weight: -14
+region: content
+weight: -19
 provider: null
 plugin: 'fixed_block_content:market_listing_page'
 settings:
   id: 'fixed_block_content:market_listing_page'
-  label: 'Market listing page'
-  label_display: '0'
+  label: Markets
+  label_display: visible
   provider: fixed_block_content
   view_mode: ''
 visibility:
