APEX-134: where to buy block

--- a/config/campbell/default/views.view.markers_map.yml
+++ b/config/campbell/default/views.view.markers_map.yml
@@ -26,7 +26,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Markers Map'
+      title: 'Where to Buy'
       fields:
         title:
           id: title
@@ -1665,7 +1665,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: 'No results match'
+            value: 'No result match.'
             format: basic_html
           tokenize: false
       arguments:
