--- a/config/clecotools/default/core.entity_form_display.paragraph.testimonials_block.default.yml
+++ b/config/clecotools/default/core.entity_form_display.paragraph.testimonials_block.default.yml
@@ -3,31 +3,22 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_entity_browser
     - field.field.paragraph.testimonials_block.field_media_src
     - field.field.paragraph.testimonials_block.field_testimonials
     - paragraphs.paragraphs_type.testimonials_block
   module:
-    - entity_browser
+    - media_library
 id: paragraph.testimonials_block.default
 targetEntityType: paragraph
 bundle: testimonials_block
 mode: default
 content:
   field_media_src:
-    type: entity_browser_entity_reference
+    type: media_library_widget
     weight: 1
     region: content
     settings:
-      entity_browser: media_entity_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: false
-      field_widget_remove: false
-      field_widget_replace: false
-      open: true
-      field_widget_display_settings:
-        view_mode: default
-      selection_mode: selection_append
+      media_types: {  }
     third_party_settings: {  }
   field_testimonials:
     type: entity_reference_autocomplete
