--- a/config/clecotools/default/core.entity_form_display.paragraph.content_section.default.yml
+++ b/config/clecotools/default/core.entity_form_display.paragraph.content_section.default.yml
@@ -3,12 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_entity_browser
     - field.field.paragraph.content_section.field_content_bundle
     - field.field.paragraph.content_section.field_media_src
     - paragraphs.paragraphs_type.content_section
   module:
-    - entity_browser
+    - media_library
     - paragraphs
 id: paragraph.content_section.default
 targetEntityType: paragraph
@@ -28,19 +27,11 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
   field_media_src:
-    type: entity_browser_entity_reference
+    type: media_library_widget
     weight: 1
     region: content
     settings:
-      entity_browser: media_entity_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: false
-      field_widget_remove: false
-      field_widget_replace: false
-      open: true
-      field_widget_display_settings:
-        view_mode: default
-      selection_mode: selection_append
+      media_types: {  }
     third_party_settings: {  }
 hidden:
   created: true
