--- a/config/clecotools/default/core.entity_form_display.paragraph.hero.default.yml
+++ b/config/clecotools/default/core.entity_form_display.paragraph.hero.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_entity_browser
     - field.field.paragraph.hero.field_animation
     - field.field.paragraph.hero.field_cta
     - field.field.paragraph.hero.field_form
@@ -15,7 +14,7 @@ dependencies:
     - field.field.paragraph.hero.field_title_suffix
     - paragraphs.paragraphs_type.hero
   module:
-    - entity_browser
+    - media_library
     - paragraphs
     - webform
 id: paragraph.hero.default
@@ -48,21 +47,14 @@ content:
     region: content
     settings:
       default_data: true
+      webforms: {  }
     third_party_settings: {  }
   field_media_src:
-    type: entity_browser_entity_reference
+    type: media_library_widget
     weight: 7
     region: content
     settings:
-      entity_browser: media_entity_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
-      field_widget_replace: false
-      open: true
-      field_widget_display_settings:
-        view_mode: default
-      selection_mode: selection_append
+      media_types: {  }
     third_party_settings: {  }
   field_size:
     type: options_select
