--- a/config/clecotools/default/core.entity_form_display.paragraph.media_image.default.yml
+++ b/config/clecotools/default/core.entity_form_display.paragraph.media_image.default.yml
@@ -3,30 +3,21 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_entity_browser
     - field.field.paragraph.media_image.field_media_src
     - paragraphs.paragraphs_type.media_image
   module:
-    - entity_browser
+    - media_library
 id: paragraph.media_image.default
 targetEntityType: paragraph
 bundle: media_image
 mode: default
 content:
   field_media_src:
-    type: entity_browser_entity_reference
+    type: media_library_widget
     weight: 0
     region: content
     settings:
-      entity_browser: media_entity_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: false
-      field_widget_remove: true
-      field_widget_replace: false
-      open: true
-      field_widget_display_settings:
-        view_mode: default
-      selection_mode: selection_append
+      media_types: {  }
     third_party_settings: {  }
 hidden:
   created: true
