--- a/config/campbell/default/block.block.wheretobuymapsession.yml
+++ b/config/campbell/default/block.block.wheretobuymapsession.yml
@@ -17,8 +17,8 @@ provider: null
 plugin: 'fixed_block_content:where_to_buy_map_session'
 settings:
   id: 'fixed_block_content:where_to_buy_map_session'
-  label: 'Where to Buy map session'
-  label_display: '0'
+  label: 'Where to Buy'
+  label_display: visible
   provider: fixed_block_content
   view_mode: ''
 visibility:
