--- a/config/campbell/default/views.view.markers_map.yml
+++ b/config/campbell/default/views.view.markers_map.yml
@@ -947,53 +947,6 @@ display:
     position: 2
     display_options:
       fields:
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          entity_type: node
-          entity_field: title
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            make_link: false
-            absolute: false
-            word_boundary: false
-            ellipsis: false
-            strip_tags: false
-            trim: false
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: true
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
         field_location:
           id: field_location
           table: node__field_location
@@ -1754,7 +1707,7 @@ display:
               administrator: '0'
               site_administrator: '0'
               content_editor: '0'
-            placeholder: ''
+            placeholder: Zip
           is_grouped: false
           group_info:
             label: ''
@@ -1797,7 +1750,7 @@ display:
               administrator: '0'
               site_administrator: '0'
               content_editor: '0'
-            placeholder: ''
+            placeholder: City
           is_grouped: false
           group_info:
             label: ''
@@ -1959,7 +1912,7 @@ display:
             placeholder: ''
           is_grouped: true
           group_info:
-            label: 'Find 10 stores within'
+            label: 'Find stores (in miles)'
             description: ''
             identifier: field_location_proximity
             optional: false
