--- a/config/gearwrench_au/default/webform.webform.contact_us.yml
+++ b/config/gearwrench_au/default/webform.webform.contact_us.yml
@@ -15,7 +15,7 @@ category: ''
 elements: |-
   select_type:
     '#type': select
-    '#title': Inquiry
+    '#title': Enquiry
     '#options':
       'Become a Distributor': 'Become a Distributor'
       'Product Feedback': 'Product Feedback'
