APEX-396: hide errorlogs from stage, qa and prod environment

--- a/config/clecotools/default/config_split.config_split.local.yml
+++ b/config/clecotools/default/config_split.config_split.local.yml
@@ -18,6 +18,7 @@ module:
 theme: {  }
 blacklist:
   - core.extension
+  - system.logging
   - system.performance
 graylist: {  }
 graylist_dependents: true
