--- a/config/clecotools/default/config_split.config_split.remote_dev.yml
+++ b/config/clecotools/default/config_split.config_split.remote_dev.yml
@@ -15,6 +15,7 @@ module:
 theme: {  }
 blacklist:
   - purge.logger_channels
+  - system.logging
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
