--- a/config/campbell/default/views.view.market_other_blocks.yml
+++ b/config/campbell/default/views.view.market_other_blocks.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_listing_image
+    - image.style.small_1x1
     - node.type.markets
   module:
+    - media
     - node
     - user
 id: market_other_blocks
@@ -74,9 +76,12 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: target_id
-          type: entity_reference_entity_view
+          type: media_thumbnail
           settings:
-            view_mode: embed
+            image_link: ''
+            image_style: small_1x1
+            image_loading:
+              attribute: lazy
           group_column: target_id
           group_columns: {  }
           group_rows: true
