APEX-139: Product Specification child level migration.

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications.yml
@@ -1,4 +1,4 @@
-uuid: 668d079c-d481-457d-99f6-c2bfd54e7c3c
+uuid: da5085fb-778e-4404-b5f5-dd1c2eb86aa3
 langcode: en
 status: true
 dependencies: {  }
@@ -12,7 +12,7 @@ label: 'Product Specifications'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
-    TEXT: ' | '
+    TEXT: ' |~| '
     WEIGHT: 0
   plugin: url
   data_fetcher_plugin: http
