--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications.yml
@@ -4,7 +4,7 @@ migration_group: cleco
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
-    TEXT: ' | '
+    TEXT: ' |~| '
     WEIGHT: 0
   plugin: url
   data_fetcher_plugin: http
