APEX-139: Product Specification child level migration.

--- a/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_gb.yml
+++ b/config/clecotools/default/migrate_plus.migration.cleco_product_specifications_gb.yml
@@ -12,7 +12,7 @@ label: 'Product Specifications for Language GB'
 source:
   constants:
     DESCRIPTION_PREFIX: 'PIM Attribute ID'
-    TEXT: ' | '
+    TEXT: ' |~| '
     WEIGHT: 0
   plugin: url
   data_fetcher_plugin: http
