APEX-139: Product Specification child level migration.

--- a/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child.yml
+++ b/docroot/modules/custom/cleco_migrations/config/install/migrate_plus.migration.cleco_product_specifications_child.yml
@@ -452,4 +452,6 @@ process:
 destination:
   plugin: 'entity:node'
   bundle: article
-migration_dependencies: {}
+migration_dependencies:
+  required:
+    - cleco_product_specifications
